--- a/css/stellar.no-query.css
+++ b/css/stellar.no-query.css
@@ -2514,6 +2514,10 @@ iframe {
 .menu {
   padding: 0; }
 
+/* line 1, ../sass/base/_messages.scss */
+.messages {
+  margin-bottom: 1em; }
+
 /* line 1, ../sass/base/_overlay.scss */
 .overlay {
   position: relative; }
