--- a/sass/components/global_regions/_l-main-container.scss
+++ b/sass/components/global_regions/_l-main-container.scss
@@ -19,7 +19,7 @@
     margin-bottom: -($pull-top-offset);
 
     // We use negative margin fallback if transform3d is not supported.
-    .no-csstransforms3d {
+    .no-csstransforms3d & {
       margin-top: -($pull-top-offset);
     }
   }
