--- a/sass/base/_forms.scss
+++ b/sass/base/_forms.scss
@@ -36,5 +36,5 @@ html.js {
   vertical-align: bottom;
   height: 12px; /* tweak this according to your gif */
   width: 15px; /* tweak this according to your gif */
-  margin-left: 10px;
+  margin-left: 1rem;
 }
