--- a/sass/base/_menu.scss
+++ b/sass/base/_menu.scss
@@ -7,7 +7,7 @@
 
     &:before {
       color: $primary-link-color;
-      margin-right: .4em;
+      margin-right: 0.8rem;
     }
 
     &.active:before {
