--- a/sass/components/global_regions/_l-footer.scss
+++ b/sass/components/global_regions/_l-footer.scss
@@ -4,8 +4,13 @@ $l-footer-bg-color: #222;
   @include box-shadow(4px -5px 20px rgba(0,0,0,0.2));
   background: $l-footer-bg-color;
   border: 1px solid darken($l-footer-bg-color, 3);
-  padding: 2rem 0;
+  padding: 2rem;
   color: #fff;
+
+  @include breakpoint($bp-pull-top-offset) {
+    padding-left: 0;
+    padding-right: 0;
+  }
 
   a {
     color: #fff;
