--- a/css/stellar.no-query.css
+++ b/css/stellar.no-query.css
@@ -2403,6 +2403,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+/* line 2, ../sass/base/_blocks.scss */
+.l-main .block, .l-footer .block {
+  margin-bottom: 2rem; }
+  /* line 6, ../sass/base/_blocks.scss */
+  .l-main .block:last-child, .l-footer .block:last-child {
+    margin-bottom: 0; }
+
 /* line 1, ../sass/base/_breadcrumb.scss */
 .breadcrumb {
   margin: 0;
@@ -2504,7 +2511,7 @@ iframe.media-youtube-player {
   .l-main .menu .collapsed:before,
   .l-footer .menu .collapsed:before {
     color: #3273B8;
-    margin-right: 0.8rem; }
+    margin-right: 0.7rem; }
   /* line 13, ../sass/base/_menu.scss */
   .l-main .menu li.active:before, .l-footer .menu li.active:before,
   .l-main .menu .leaf.active:before,
@@ -2538,6 +2545,21 @@ iframe.media-youtube-player {
 /* line 27, ../sass/base/_menu.scss */
 .menu {
   padding: 0; }
+
+/* line 38, ../sass/base/_menu.scss */
+.l-region--sidebar .block--menu-block .block__title:after {
+  content: "";
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  transform: translate(0, 0);
+  float: right;
+  margin-left: 0.8rem;
+  position: relative;
+  top: 2px; }
 
 /* line 1, ../sass/base/_messages.scss */
 .messages {
@@ -2897,9 +2919,15 @@ a {
   border: 1px solid #ededed;
   padding: 2rem; }
   /* line 8, ../sass/components/global_regions/_l-sidebars.scss */
-  .l-region--sidebar h2 {
-    font-size: 15px;
-    font-size: 1.5rem; }
+  .l-region--sidebar .block__title {
+    font-size: 16px;
+    font-size: 1.6rem;
+    margin-bottom: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid gainsboro; }
+  /* line 15, ../sass/components/global_regions/_l-sidebars.scss */
+  .l-region--sidebar .block:last-child {
+    margin-bottom: 0; }
 
 /* line 3, ../sass/components/global_regions/_l-title-bar.scss */
 .l-title-bar {
