--- a/sass/components/global_regions/_l-sidebars.scss
+++ b/sass/components/global_regions/_l-sidebars.scss
@@ -5,7 +5,14 @@
   border: 1px solid darken($sidebar-bg-color, 3);
   padding: 2rem;
 
-  h2 {
-    @include font-size(1.5);
+  .block__title {
+    @include font-size(1.6);
+    margin-bottom: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid darken($sidebar-bg-color, 10);
+  }
+
+  .block:last-child {
+    margin-bottom: 0;
   }
 }
