--- a/sass/base/_grids.scss
+++ b/sass/base/_grids.scss
@@ -3,6 +3,7 @@ $grids: 12;
 @include add-grid($grids);
 @include add-gutter(1/3);
 
+// Isolation span grid def.
 @for $i from 1 through $grids {
   @for $n from 1 through $grids - $i + 1 {
     .span#{$n}-#{$i} {
@@ -10,6 +11,17 @@ $grids: 12;
         @include grid-span($n, $i);
         overflow: visible !important;
       }
+    }
+  }
+}
+
+// Float span grid def. grids of 3.
+.floatspan4 {
+  @include breakpoint(900px) {
+    @include float-span(4);
+
+    &.clear {
+      @include float-span(4, 'last');
     }
   }
 }
